--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_check_appointments.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_check_appointments.html
@@ -47,7 +47,7 @@
                     {% if appoint.type == 0 %}
                     <td>Emergent</td>
                     {% elif appoint.type == 1 %}
-                    <td>Regular</td>
+                    <td>Standard</td>
                     {% endif %}
                     <td>{{ appoint.time }}</td>
                     <td>{{ customers[index] }}</td>
