Add mechanism that ensures non-replicated ongoing appointment for same pets

--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_main.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_console_main.html
@@ -91,6 +91,9 @@
             </div>
         </div>
    </div>
+   <div class="col-3" text-center>
+        <h2>{{ get_flashed_messages()[0] }}</h2>
+   </div>
 </div>
 
 <div class="row">
