--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_appointments.html
@@ -7,16 +7,16 @@
                 <table class="table">
                     <thead>
                         <tr>
-                            <th>User</th>
+                            <th data-locale="MyAppointment_User">User</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <th>Name:</th>
+                            <th data-locale="MyAppointment_Name">Name:</th>
                             <td>{{user.username}}</td>
                         </tr>
                         <tr>
-                            <th>Email:</th>
+                            <th data-locale="MyAppointment_Email">Email:</th>
                             <td>{{user.email}}</td>
                         </tr>
                     </tbody>
@@ -36,20 +36,20 @@
                         <table class="table">
                             <thead>
                                 <tr>
-                                    <th>Appointments</th>
+                                    <th data-locale="MyAppointment_Appointments">Appointments</th>
                                 </tr>
                             </thead>
                             <tbody>
 
                                 <tr>
-                                    <th>Pet Name</th>
-                                    <th>Pet ID</th>
-                                    <th>Appointment ID</th>
-                                    <th>Appointments Type </th>
-                                    <th>Construction Time </th>
-                                    <th>Appointments Description </th>
-                                    <th>Current Status</th>
-                                    <th>Operator ID </th>
+                                    <th data-locale="MyAppointment_Pet Name">Pet Name</th>
+                                    <th data-locale="MyAppointment_Pet ID">Pet ID</th>
+                                    <th data-locale="MyAppointment_Appointment ID">Appointment ID</th>
+                                    <th data-locale="MyAppointment_Appointments Type">Appointments Type </th>
+                                    <th data-locale="MyAppointment_Construction Time">Construction Time </th>
+                                    <th data-locale="MyAppointment_Appointments Description">Appointments Description </th>
+                                    <th data-locale="MyAppointment_Current Status">Current Status</th>
+                                    <th data-locale="MyAppointment_Operator ID">Operator ID </th>
                                 </tr>
 
                                 {% for a in appointments%}
