Staff edit and delete question answer

--- a/HospitalSystem/HospitalSystem/systemapp/templates/answer_question.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/answer_question.html
@@ -43,5 +43,11 @@
 </div>
 </div>
 
-
+                <script language="javascript"> 
+                    window.onload = function()
+                        { 
+                        var content = document.getElementById('content');
+                        content.innerHTML="{{content}}";
+                        }
+            </script>
 {% endblock %}
