--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_question_update.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_question_update.html
@@ -38,4 +38,12 @@
                     </div>
                   </div>
                 </div>
+
+                <script language="javascript"> 
+                    window.onload = function()
+                        { 
+                        var content = document.getElementById('content');
+                        content.innerHTML="{{qcontent}}";
+                        }
+            </script>
 {% endblock %}
