--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_questiondetail.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_questiondetail.html
@@ -31,6 +31,8 @@
     </div>
       <div class="panel-footer">
       {{a.time}}
+                          <div class="btn btn-primary btn-sm" onclick="window.location.href='/staff_questions/edit_answer/{{a.id}}'" role="button">Edit</div>
+                    <div class="btn btn-primary btn-sm" onclick="window.location.href='/staff_questions/delete_answer/{{a.id}}'" role="button">Delete</div>
       </div>
 </div>
 </div>
