--- a/HospitalSystem/HospitalSystem/systemapp/templates/staff_checkpets.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/staff_checkpets.html
@@ -1,6 +1,5 @@
 {% extends "staff_base.html" %}
 
-
 {% block content %}
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 
@@ -26,29 +25,39 @@
                             <tbody>
 
                                 <tr>
-                                    <th>Pet Name  <a href="#"> <i class="fa fa-sort" aria-hidden="true" ></i> </a></th>
-                                    <th>Pet ID </th>
-                                    <th>Pet type</th>
-                                    <th>Owner ID</th>
+                                    <th>Pet Name</th>
+                                    <th id="th1" onclick="SortTable(this)" class="as">Pet ID<a href="#"> <i class="fa fa-sort" aria-hidden="true" ></i> </a></th>
+                                    <th id="th2" onclick="SortTable(this)" class="as">Pet type<a href="#"> <i class="fa fa-sort" aria-hidden="true" ></i> </a></th>
+                                    <th id="th3" onclick="SortTable(this)" class="as">Owner ID<a href="#"> <i class="fa fa-sort" aria-hidden="true" ></i> </a></th>
                                     <th>Owner Name</th>
+                                    <th>Pet Status</th>
                                 </tr>
 
                                 {% for pet in pets%}
                                     {% for customer in customers%}
+                                    {% for appointment in appointments%}
                                     {%  if pet.owner_id==customer.id %}
+                                        {%  if appointment.pet_id==pet.id %}
+
                                     <tr>
-                                    <td>{{pet.name}}</td>
-                                    <td>{{pet.id}}</td>
-                                    <td>{{pet.type}}</td>
-                                    <td>{{pet.owner_id}}</td>
+                                    <td name="td0">{{pet.name}}</td>
+                                    <td name="td1">{{pet.id}}</td>
+                                    <td name="td2">{{pet.type}}</td>
+                                    <td name="td3">{{pet.owner_id}}</td>
                                     <td>{{customer.username}}</td>
+                                    <td>{{appointment.pet_status}}</td>
                                     <td><a class="btn btn-primary btn-sm" href="/staff_checkpets/update_pet/{{pet.id}}" role="button">Edit</a>
                                     </td>
 
                                 </tr>
+
+                                    {% endif %}
                                         {% endif %}
-                                {% endfor %}
+
                             {% endfor %}
+                          {% endfor %}
+
+                         {% endfor %}
 
 
                             </tbody>
@@ -66,4 +75,70 @@
 
 
 
+
+
+<script type="text/javascript">
+      var tag=1;
+      function sortNumberAS(a, b)
+      {
+          return a - b
+      }
+      function sortNumberDesc(a, b)
+      {
+          return b-a
+      }
+
+      function SortTable(obj){
+          var td0s=document.getElementsByName("td0");
+          var td1s=document.getElementsByName("td1");
+          var td2s=document.getElementsByName("td2");
+          var td3s=document.getElementsByName("td3");
+          var tdArray0=[];
+          var tdArray1=[];
+          var tdArray2=[];
+          var tdArray3=[];
+          for(var i=0;i<td0s.length;i++){
+              tdArray0.push(td0s[i].innerHTML);
+          }
+          for(var i=0;i<td1s.length;i++){
+              tdArray1.push(parseInt(td1s[i].innerHTML));
+          }
+          for(var i=0;i<td2s.length;i++){
+              tdArray2.push(parseInt(td2s[i].innerHTML));
+          }
+          for(var i=0;i<td3s.length;i++){
+              tdArray3.push(parseInt(td3s[i].innerHTML));
+          }
+          var tds=document.getElementsByName("td"+obj.id.substr(2,1));
+          var columnArray=[];
+          for(var i=0;i<tds.length;i++){
+              columnArray.push(parseInt(tds[i].innerHTML));
+          }
+          var orginArray=[];
+          for(var i=0;i<columnArray.length;i++){
+              orginArray.push(columnArray[i]);
+          }
+          if(obj.className=="as"){
+              columnArray.sort(sortNumberAS);               //排序后的新值
+              obj.className="desc";
+          }else{
+              columnArray.sort(sortNumberDesc);               //排序后的新值
+              obj.className="as";
+          }
+
+
+         for(var i=0;i<columnArray.length;i++){
+             for(var j=0;j<orginArray.length;j++){
+                 if(orginArray[j]==columnArray[i]){
+                     document.getElementsByName("td0")[i].innerHTML=tdArray0[j];
+                     document.getElementsByName("td1")[i].innerHTML=tdArray1[j];
+                     document.getElementsByName("td2")[i].innerHTML=tdArray2[j];
+                     document.getElementsByName("td3")[i].innerHTML=tdArray3[j];
+                     orginArray[j]=null;
+                     break;
+                 }
+             }
+         }
+     }
+</script>
 {% endblock %}
