--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_questiondetail.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_questiondetail.html
@@ -10,11 +10,7 @@
             <div class="card-body no-padding">
               <div class="item d-flex align-items-center">
                 <div class="text">
-                    <h3 class="h3">{{question.content}}</h3></a><small>{{question.time}}</small>
-                    <div class="btn btn-primary btn-sm" onclick="window.location.href='/customer_questions/edit_question/{{question.id}}'" role="button">Edit</div>
-                    <div class="btn btn-primary btn-sm" onclick="window.location.href='/customer_questions/delete_question/{{question.id}}'" role="button">Delete</div>
-                </div>
-
+                    <h3 class="h3">{{question.content}}</h3></a><small>{{question.time}}</small></div>
               </div>
             </div>
           </div>
