--- a/HospitalSystem/HospitalSystem/systemapp/static/css/css_index/style.css
+++ b/HospitalSystem/HospitalSystem/systemapp/static/css/css_index/style.css
@@ -166,6 +166,36 @@ li {
   -o-transition: all 0.5s ease;
 }
 
+
+.btn-style-special {
+  font-size: 14px;
+  font-weight: 600;
+  color: #ffffff;
+  line-height: 27px;
+  padding: 8px 36px;
+  background: #48bdc5;
+  border: 1px solid #48bdc5;
+  display: inline-block;
+  text-transform: uppercase;
+  font-family: "Source Sans Pro", sans-serif;
+  transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+
+.btn-style-special:hover {
+  color: #48b555;
+  border: 1px solid #48bdc5;
+  background: #ffffff;
+  transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+
 .btn-style-two {
   font-size: 14px;
   font-weight: 600;
