--- a/HospitalSystem/HospitalSystem/systemapp/templates/nav.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/nav.html
@@ -84,7 +84,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
                         <li class="active">
-                              <a href="index.html" data-locale="Home">Home</a>
+                              <a href="{{ url_for('index')}}" data-locale="Home">Home</a>
                         </li>
                         <li>
                               <a href="#" data-locale="News">News</a>
@@ -126,7 +126,7 @@
             <div class="footer-logo">
               <figure>
                 <a href="index.html">
-                  <img src="../static/images/index_img/logo-2.png" alt="">
+                  <img src="../static/images/index_img/logo_index.png" alt="" width="70%" height="70%">
                 </a>
               </figure>
             </div>
@@ -164,7 +164,7 @@
                 <div class="media">
                   <div class="media-left">
                     <a href="#">
-                      <img class="media-object" src="../static/images/index_img/blog/post-thumb-small.jpg" alt="post-thumb">
+                      <img class="media-object" src="../static/images/index_img/blog/post-thumb-small.png" alt="post-thumb" width="50px" height="50px">
                     </a>
                   </div>
                   <div class="media-body">
@@ -177,7 +177,7 @@
                 <div class="media">
                   <div class="media-left">
                     <a href="#">
-                      <img class="media-object" src="../static/images/index_img/blog/post-thumb-small.jpg" alt="post-thumb">
+                      <img class="media-object" src="../static/images/index_img/blog/post-thumb-small.png" alt="post-thumb" width="50px" height="50px">
                     </a>
                   </div>
                   <div class="media-body">
