--- a/HospitalSystem/HospitalSystem/systemapp/templates/customer_login.html
+++ b/HospitalSystem/HospitalSystem/systemapp/templates/customer_login.html
@@ -1,47 +1,77 @@
 {% extends"nav.html" %}
 
 {% block content %}
-<div class="jumbotron">
+
+<!--==================================
+=            Contact Form            =
+===================================-->
+<section class="section contact">
+    <!-- container start -->
     <div class="container">
-        <div class="row row-centered">
-            <div class="well col-md-6 col-centered">
 
-                <h1>Welcome!<br>Let's get start.</h1>
+        <div class="row">
+            <div class="col-md-6">
+             <div class="section-title text-left">
+                <h3>Welcome!
+                    <span>Let's get start.</span>
+                </h3>
+            </div>
+            <br>
+                <div class="contact-form">
+                    <form action="" method="post" id="customer_login_form" novalidate role="form" class="row">
+                        {{ form.hidden_tag() }}
 
-                <form action="" method="post" id="customer_login_form" novalidate role="form" class="form-horizontal">
-                    {{ form.hidden_tag() }}
+                        <div class="col-md-12">
+                            {{ form.username.label }}<br>
+                            {{ form.username(class="form-control main") }}
+                             <span>{{ noneerror }}</span>
+    <!--                        {% for error in form.username.errors %}-->
+    <!--                            <span>{{ error }}</span>-->
+    <!--                        {% endfor %}-->
+                            <span id="notice_username"></span>
+                        </div>
 
-                    <div class="input-group">
-                        {{ form.username.label }}<br>
-                        {{ form.username(size=32) }}
-                         <span>{{ noneerror }}</span>
-<!--                        {% for error in form.username.errors %}-->
-<!--                            <span>{{ error }}</span>-->
-<!--                        {% endfor %}-->
-                        <span id="notice_username"></span>
-                    </div>
+                        <div class="col-md-12">
+                            {{ form.password.label }}<br>
+                            {{ form.password(class="form-control main") }}
+                             <span>{{ pwerror }}</span>
+    <!--                        {% for error in form.password.errors %}-->
+    <!--                            <span>{{ error }}</span>-->
+    <!--                        {% endfor %}-->
+                            <span id="notice_password"></span>
+                        </div>
 
-                    <div class="input-group">
-                        {{ form.password.label }}<br>
-                        {{ form.password(size=32) }}
-                         <span>{{ pwerror }}</span>
-<!--                        {% for error in form.password.errors %}-->
-<!--                            <span>{{ error }}</span>-->
-<!--                        {% endfor %}-->
-                        <span id="notice_password"></span>
-                    </div>
-
-                    <div class="input-group">
-                        {{ form.remember_me() }} {{ form.remember_me.label }}
-                        <br>
-                        {{ form.submit() }}
-                    </div>
-            </form>
-
+                        <div class="col-md-6 text-left">
+                            {{ form.remember_me() }} {{ form.remember_me.label }}
+                        </div>
+                        <div class="col-md-6 text-right">
+                            {{ form.submit(class="btn btn-style-one") }}
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="col-md-2">
+            </div>
+            <div class="col-md-4">
+                <div class="section-title text-left">
+                    <h3>Don't have one?
+                        <span>Join us now!</span>
+                    </h3>
+                </div>
+                <!-- address start -->
+                <br><br>
+                <!-- submit button -->
+                <div class="col-md-12 text-center">
+{#                    <button class="btn btn-style-one" type="submit" href="{{ url_for('signup')}}">Register An Account</button>#}
+                    <a href="{{ url_for('signup')}}" class="btn-style-one">Register An Account</a>
+                </div>
             </div>
         </div>
     </div>
- </div>
+    <!-- container end -->
+</section>
+<!--====  End of Contact Form  ====-->
+
     <script src="{{ url_for('static', filename='script/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static',filename='script/customer_login.js') }}"></script>
 {% endblock %}
